--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>We're about to learn a new language!</h1>
+  <h1>Prueba de cambios en la página</h1>
   <h2>And it's going to help us add STYLE</h2>
   <h1>But how does it work?</h1>
 </body>
