--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html> 
-<html> 
-<head>
-   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Prueba de cambios en la página</h1>
-  <h2>And it's going to help us add STYLE</h2>
-  <h1>But how does it work?</h1>
-</body>
+<html lang="es"> 
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device=width, initial-scale=1.0">
+      <title>flying ball</title>
+      <link rel="stylesheet" type="text/css" href="css/estilos.css">
+   </head>
+   <body>
+     <div id="end-menu">
+         <h1></h1>
+     <div></div>
+   </body>
+   <footer></footer>
 </html>
