--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
    </head>
    <body>
      <div id="end-menu">
-         <h1></h1>
-     <div></div>
+        <h1>Game-over!</h1>
+        <p>Score: <span id="end-score"></span></p>
+        <p>Best: <span id="best-score"></span></p>
+     </div>
+     <div id="game-container">
+        <canvas id="game-canvas" width="400" height="600"></canvas>
+        <div id="score-display">0</div>
+     </div>
+     <script src="juego.js"></script>
    </body>
    <footer></footer>
 </html>
